Fix navbar gradient line on mobile Safari

--- a/website/v2/css/styles.css
+++ b/website/v2/css/styles.css
@@ -197,6 +197,7 @@ p {
     .navbar {
         top: 0;
         border-top: none;
+        background: transparent;
     }
 }
 
